--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
       <center>
       <ul>
     <li class="nav"><a href="./main.html">home</a></li>
-    <li class="nav"><a href="./contact.html">portfolio</a></li>
+    <li class="nav"><a href="./contact.html">contact</a></li>
       </ul>
       </center>
     </nav>
